Solved image flickering and windows size changes on deskop and lg tablets.

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ header {
    margin: auto;
 }
 
+
 #planet-image img {
     width: 100%;
     height: auto;
@@ -103,6 +104,10 @@ header {
 
 
 #planet-description {
+    min-height: 11rem;
+}
+
+#planet-desc-text{
     font-family: League Spartan;
     font-size: 1rem;
     color: #fff;
@@ -290,8 +295,8 @@ header {
     }
 
     #planet-image {
-        max-width: 30rem;
-        max-height: 30rem;
+        max-width: 27rem;
+        max-height: auto;
         overflow: hidden;
         margin: auto;
         margin: 0 0 2.5rem 0;
@@ -354,8 +359,8 @@ header {
     }
 
     #planet-image {
-        max-width: 30rem;
-        max-height: 30rem;
+        max-width: 20rem;
+        max-height: auto;
         overflow: hidden;
         margin: auto;
         margin: 0 0 2.5rem 0;
